style(all) : fix spacing and make it responsive

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+.ui.menu.item {
+    padding: 0 !important
+}
+
 body {
     margin: 0;
     font-family: "Avenir", sans-serif;
@@ -176,18 +180,22 @@ code {
 
 .locate_find {
     position: relative;
-    top: .5vh;
+    top: .1vh;
     left: 0;
     background: none;
     border: none;
     z-index: 10;
-    height: 50px
+    height: 50px;
+    /* margin-left: 5px; */
+    /* margin-right: 5px; */
 }
 
 .locate_find img {
     width: 40px;
     cursor: pointer;
     z-index: 300;
+    margin-left: 5px;
+    padding-right: 5px;
 }
 
 #partyList:hover {
